openfgdb4j/native/include/openfgdb_c_api.h

OFGDB_API int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle);
OFGDB_API int ofgdb_close_field_info(uint64_t field_info_handle);
OFGDB_API int ofgdb_field_info_count(uint64_t field_info_handle, int32_t *out_count);
OFGDB_API int ofgdb_field_info_name(uint64_t field_info_handle, int32_t index, char **out_name);
OFGDB_API int ofgdb_set_string(uint64_t row_handle, const char *column_name, const char *value);
OFGDB_API int ofgdb_set_int32(uint64_t row_handle, const char *column_name, int32_t value);
OFGDB_API int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value);