openfgdb4j/src/generated/java/ch/ehi/openfgdb4j/ffm/OpenFgdbNative.java


    /**
     * {@snippet lang=c :
     * int ofgdb_get_field_info(uint64_t table_handle, uint64_t *field_info_handle)
     * }
     */
    public static int ofgdb_get_field_info(long table_handle, MemorySegment field_info_handle) {
        var mh$ = ofgdb_get_field_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_get_field_info", table_handle, field_info_handle);
            }
            return (int)mh$.invokeExact(table_handle, field_info_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_close_field_info {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_close_field_info").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_close_field_info"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_close_field_info(uint64_t field_info_handle)
     * }
     */
    public static FunctionDescriptor ofgdb_close_field_info$descriptor() {
        return ofgdb_close_field_info.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_close_field_info(uint64_t field_info_handle)
     * }
     */
    public static MethodHandle ofgdb_close_field_info$handle() {
        return ofgdb_close_field_info.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_close_field_info(uint64_t field_info_handle)
     * }
     */
    public static MemorySegment ofgdb_close_field_info$address() {
        return ofgdb_close_field_info.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_close_field_info(uint64_t field_info_handle)
     * }
     */
    public static int ofgdb_close_field_info(long field_info_handle) {
        var mh$ = ofgdb_close_field_info.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_close_field_info", field_info_handle);
            }
            return (int)mh$.invokeExact(field_info_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_field_info_count {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_field_info_count").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_field_info_count"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_field_info_count(uint64_t field_info_handle, int32_t *out_count)
     * }
     */
    public static FunctionDescriptor ofgdb_field_info_count$descriptor() {
        return ofgdb_field_info_count.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_field_info_count(uint64_t field_info_handle, int32_t *out_count)
     * }
     */
    public static MethodHandle ofgdb_field_info_count$handle() {
        return ofgdb_field_info_count.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_field_info_count(uint64_t field_info_handle, int32_t *out_count)
     * }
     */
    public static MemorySegment ofgdb_field_info_count$address() {
        return ofgdb_field_info_count.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_field_info_count(uint64_t field_info_handle, int32_t *out_count)
     * }
     */
    public static int ofgdb_field_info_count(long field_info_handle, MemorySegment out_count) {
        var mh$ = ofgdb_field_info_count.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_field_info_count", field_info_handle, out_count);
            }
            return (int)mh$.invokeExact(field_info_handle, out_count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_field_info_name {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_field_info_name").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_field_info_name"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_field_info_name(uint64_t field_info_handle, int32_t index, char **out_name)
     * }
     */
    public static FunctionDescriptor ofgdb_field_info_name$descriptor() {
        return ofgdb_field_info_name.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_field_info_name(uint64_t field_info_handle, int32_t index, char **out_name)
     * }
     */
    public static MethodHandle ofgdb_field_info_name$handle() {
        return ofgdb_field_info_name.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_field_info_name(uint64_t field_info_handle, int32_t index, char **out_name)
     * }
     */
    public static MemorySegment ofgdb_field_info_name$address() {
        return ofgdb_field_info_name.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_field_info_name(uint64_t field_info_handle, int32_t index, char **out_name)
     * }
     */
    public static int ofgdb_field_info_name(long field_info_handle, int index, MemorySegment out_name) {
        var mh$ = ofgdb_field_info_name.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_field_info_name", field_info_handle, index, out_name);
            }
            return (int)mh$.invokeExact(field_info_handle, index, out_name);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_string").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_string"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_string(uint64_t row_handle, const char *column_name, const char *value)
     * }
     */
    public static FunctionDescriptor ofgdb_set_string$descriptor() {
        return ofgdb_set_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_string(uint64_t row_handle, const char *column_name, const char *value)
     * }
     */
    public static MethodHandle ofgdb_set_string$handle() {
        return ofgdb_set_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_string(uint64_t row_handle, const char *column_name, const char *value)
     * }
     */
    public static MemorySegment ofgdb_set_string$address() {
        return ofgdb_set_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_string(uint64_t row_handle, const char *column_name, const char *value)
     * }
     */
    public static int ofgdb_set_string(long row_handle, MemorySegment column_name, MemorySegment value) {
        var mh$ = ofgdb_set_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_string", row_handle, column_name, value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_int32 {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_int32").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_int32"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_int32(uint64_t row_handle, const char *column_name, int32_t value)
     * }
     */
    public static FunctionDescriptor ofgdb_set_int32$descriptor() {
        return ofgdb_set_int32.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int ofgdb_set_int32(uint64_t row_handle, const char *column_name, int32_t value)
     * }
     */
    public static MethodHandle ofgdb_set_int32$handle() {
        return ofgdb_set_int32.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int ofgdb_set_int32(uint64_t row_handle, const char *column_name, int32_t value)
     * }
     */
    public static MemorySegment ofgdb_set_int32$address() {
        return ofgdb_set_int32.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int ofgdb_set_int32(uint64_t row_handle, const char *column_name, int32_t value)
     * }
     */
    public static int ofgdb_set_int32(long row_handle, MemorySegment column_name, int value) {
        var mh$ = ofgdb_set_int32.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ofgdb_set_int32", row_handle, column_name, value);
            }
            return (int)mh$.invokeExact(row_handle, column_name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ofgdb_set_double {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            OpenFgdbNative.C_INT,
            OpenFgdbNative.C_LONG_LONG,
            OpenFgdbNative.C_POINTER,
            OpenFgdbNative.C_DOUBLE
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("ofgdb_set_double").orElseThrow(() -> new IllegalStateException("Native symbol not found: ofgdb_set_double"));

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int ofgdb_set_double(uint64_t row_handle, const char *column_name, double value)
     * }
     */
    public static FunctionDescriptor ofgdb_set_double$descriptor() {
        return ofgdb_set_double.DESC;
    }
